# AERSP424

./: .gitignore  README.md
Homework 1/Problem 1/: New Text Document.txt  question1.cpp
Homework 1/Problem 2/: CMakeLists.txt  question2.cpp
Homework 1/Problem 3/: CMakeLists.txt  plane_class.h  question3.cpp
Homework 1/Problem 4/: CMakeLists.txt  plane_class.h  question4.cpp
Homework 1/Problem 5/: CMakeLists.txt  plane_class.h  question5.cpp
Homework 1/Problem 6/: CMakeLists.txt  pilot_class.h  plane_class.h  question6.cpp
Homework 1/Problem 7/: CMakeLists.txt  pilot_class.h  plane_class.h  question7.cpp
Homework 1/Problem 8/: CMakeLists.txt  pilot_class.h  plane_class.h  question8.cpp
Homework 2/Problem 1/: CMakeLists.txt  question1.cpp
Homework 2/Problem 2/: CMakeLists.txt  question2.cpp
Homework 2/Problem 3/: CMakeLists.txt  question3.cpp
Homework 2/Problem 4/: main.cpp  question4.cpp
Homework 2/Problem 5/: Problem 5 Answer.txt
Homework 2/Problem 6/: Problem 6 Answer.txt
